[package]
name = "fronius-prometheus-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0"
log = "0"
metrics-exporter-prometheus = "0"
reqwest = { version = "0", default-features = false, features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
metrics = "0"
mdns-sd = "0"
